added clustering prediction

--- a/src/data-analysis.ipynb
+++ b/src/data-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -671,28 +671,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5460</th>\n",
-       "      <td>32m5suoC94ytD8Ed</td>\n",
-       "      <td>Ariana Grande</td>\n",
-       "      <td>7 rings</td>\n",
-       "      <td>thank u, next</td>\n",
+       "      <th>94282</th>\n",
+       "      <td>rWcnnOBwpBtZy1Wl</td>\n",
+       "      <td>Project Pitchfork</td>\n",
+       "      <td>The Circus</td>\n",
+       "      <td>Black</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    id         artist     song     album_name\n",
-       "5460  32m5suoC94ytD8Ed  Ariana Grande  7 rings  thank u, next"
+       "                     id             artist        song album_name\n",
+       "94282  rWcnnOBwpBtZy1Wl  Project Pitchfork  The Circus      Black"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "id_information.loc[id_information['id'] == '32m5suoC94ytD8Ed']"
+    "id_information.loc[id_information['id'] == 'rWcnnOBwpBtZy1Wl']"
    ]
   },
   {
